@@ -1,5 +1,13 @@
 2010-01-26  Jaroslav Hajek  <highegg@gmail.com>
 
+	* optimization/fsolve.m: Support TypicalX, autoscale only if
+	AutoScaling is on, off by default. Fix default tolerances.
+	* optimization/fminunc.m: Support TypicalX, autoscale only if
+	AutoScaling is on, off by default Fix default tolerances..
+	* optimization/private/__fdjac__.m: Accept typicalx as a parameter.
+
+2010-01-26  Jaroslav Hajek  <highegg@gmail.com>
+
 	* optimization/pqpnonneg.m: If Cholesky update failed, switch off
 	updating but continue.
 
